samples/_failures_safe/1761362058_20f4d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_891f590e.c: In function ‘main’:
./samples/SAFE/__tmp_891f590e.c:173:5: error: expected declaration or statement at end of input
  173 |     char buffer[256];
      |     ^~~~
